# pixclutter

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  pixclutter.c  pixlutter.c
include/: Makefile.am  pixlutter.h
include/pixlutter/: Makefile.am
lib/: Makefile.am  window.c
src/: Makefile.am  pixlutter.c  window.c  window.h
test/: Makefile.am  run-test.sh  test-window.c
